--- a/index.html
+++ b/index.html
@@ -4,48 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Abbaty Kori</title>
-	<link rel="stylesheet" href="css/main.css">
-	<link href='https://fonts.googleapis.com/css?family=Patua+One|Varela+Round' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-63850769-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 	<header>
-		<a href="index.html">Home</a>
-		<a href="about-me.php">About Me</a>
-		<a href="contact.php">Get in Touch</a>
-		<a href="https://blog.abbatykori.com/">Blog</a>
+		<nav></nav>
 	</header>
-
-
-	<main>
-		<h1>Site Title</h1>
-		<section>
-			<div class="card"></div>
-		</section>
-	</main>
-
-
-	<footer>
-		<ul class="connect">
-			<li><a href=""><i></i></a></li>
-			<li><a href=""><i></i></a></li>
-			<li><a href=""><i></i></a></li>
-			<li><a href=""><i></i></a></li>
-			<li><a href=""><i></i></a></li>
-			<li><a href=""><i></i></a></li>
-		</ul>
-		<p>
-			Muhammad Abdullahi Kori, 2016
-		</p>
-	</footer>
 </body>
 </html>
