adds html structure + sass file for landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,52 @@
 </head>
 <body>
 	<header>
-		<nav></nav>
+		<nav>
+			<div class="logo"></div>
+			<ul class="menu">
+				<li><a href="">home</a></li>
+				<li><a href="">about</a></li>
+				<li><a href="">projects</a></li>
+				<li><a href="">contact me</a></li>
+				<li><a href="">blog</a></li>
+			</ul>
+		</nav>
 	</header>
+<main>
+	<section>
+
+	<h1>Recent Stuff</h1>
+	<div class="project">
+		<div class="image">
+			<img src="" alt="">
+		</div>
+		<div class="project-details">
+			<h3>Project Title</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam asperiores, aspernatur deleniti ducimus earum esse ex magnam modi nesciunt nobis nulla, obcaecati optio praesentium quas qui quia repellat repellendus velit?</p>
+			<a href=""></a>
+		</div>
+	</div>
+
+		<section>
+			<h2>About Me</h2>
+			<div class="about-me">
+				<div class="about-me--infotext">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, atque, blanditiis corporis deleniti ea est eum ex id ipsum mollitia nam nihil nobis, non praesentium quo rem repudiandae sed</p>
+					<ul class="contacticons">
+						<li><a href=""><i class="icons"></i>@AbbatyKori</a></li>
+						<li><a href=""><i class="icons"></i>Send an Email</a></li>
+						<li><a href=""><i class="icons"></i>/AbbatyKori</a></li>
+						<li><a href=""><i class="icons"></i></a>/AbbatyKori</li>
+					</ul>
+				</div>
+			</div>
+		</section>
+	</section>
+</main>
+<footer>
+	<div class="">
+		<p class="copyright">2017. Stetur adipisicing elit. Cumque dolore et excepturi </p>
+	</div>
+</footer>
 </body>
 </html>
