adds scss processing via webpack

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-gradient">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<title>Abbaty Kori</title>
-	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<header>
@@ -55,5 +54,6 @@
 		<p class="copyright">2017. Stetur adipisicing elit. Cumque dolore et excepturi </p>
 	</div>
 </footer>
+	<script src="dist/main.js"></script>
 </body>
 </html>
